# prohibition_areas_plugin

./: CMakeLists.txt  README.md  costmap_plugins.xml  package.xml  restriction_layer_plugin.xml  rviz_plugins.xml
config/: CostmapProhibitionLayer.cfg  ProhibitionAreasLayer.cfg  costmap_common_params.yaml  global_costmap_plugins.yaml  local_costmap_plugins.yaml  restrictions.yaml
include/map_restriction_plugin/: draw_tool.h  restriction_data.h  restriction_layer.h
include/prohibition_areas_plugin/prohibition_areas_layer/: prohibition_areas_layer.h  prohibition_areas_layer_helper.h
include/prohibition_areas_plugin/prohibition_areas_tool/: edit_points_frame.h  prohibition_areas_display.h  prohibition_areas_saver.h  prohibition_areas_tool.h
launch/: edit_prohibition_areas.launch  map_restriction_plugin.launch  prohibition_areas_plugin.launch  test_prohibition_areas.launch  test_restricted_areas.launch
maps/: amr_map.pgm  amr_map.yaml
msg/: ProhibitionArea.msg  ProhibitionAreas.msg  Restriction.msg  RestrictionArray.msg
resources/: map_restriction_plugin.qrc  map_restriction_plugin_rc.py  prohibition_areas_plugin.qrc  prohibition_areas_plugin_rc.py
restricted_areas/: restricted_areas.yaml
rviz/: edit_prohibition_areas.rviz  navigation.rviz  prohibition_areas.rviz
rviz_plugin/: plugins.xml
src/: draw_tool.cpp  load_node.cpp  restriction_data.cpp  restriction_layer.cpp  save_node.cpp
src/prohibition_areas_layer/: prohibition_areas_layer.cpp
src/prohibition_areas_tool/: edit_points_frame.cpp  prohibition_areas_display.cpp  prohibition_areas_saver.cpp  prohibition_areas_tool.cpp
