<?xml version="1.0"?>
<package format="2">
    <name>map_restriction_plugin</name>
    <version>1.0.0</version>
    <description>ROS package for drawing and managing map restrictions in navigation</description>
    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rviz</depend>
    <depend>costmap_2d</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>yaml-cpp</depend>    <!-- 用于YAML配置文件支持 -->
    <depend>pluginlib</depend>

    <export>
        <rviz plugin="${prefix}/rviz_plugin/plugins.xml"/>
        <costmap_2d plugin="${prefix}/restriction_layer_plugin.xml"/>
    </export>
</package>