<?xml version="1.0"?>
<package>
  <name>prohibition_areas_plugin</name>
  <version>0.1.0</version>
  <description>ROS包,提供用于在代价地图中定义和可视化禁区的插件</description>

  <maintainer email="hoshizoranihon@gmail.com">XKHoshizora</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 编译依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>xmlrpcpp</build_depend>

  <!-- 运行依赖 -->
  <run_depend>roscpp</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>xmlrpcpp</run_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- 导出插件声明 -->
  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
    <rviz plugin="${prefix}/rviz_plugins.xml" />
  </export>
</package>